# thesis-rag-assistant

./: .env.example  .gitignore  README.en.md  README.md  TECH_STACK.md  app.py  pyproject.toml
.streamlit/: config.toml
data/samples/: demo_thesis_001.md  demo_thesis_002.md  demo_thesis_003.md  demo_thesis_004.md  demo_thesis_005.md
docs/: ARCHITECTURE.md  GITHUB_RELEASE_CHECKLIST.md  RUNBOOK.md
scripts/: check_env.ps1  clean_demo_runtime.ps1  clean_local_cache.ps1  configure_internal.ps1  configure_llm.ps1  prepare_demo_assets.ps1  reset_demo_assets.ps1  run_demo.ps1  run_demo_ui.ps1  run_internal.ps1  run_internal_ui.ps1  set_internal_env.example.ps1  setup_demo.ps1  verify_project.ps1  write_demo_snapshot.ps1  write_internal_snapshot.ps1
src/thesis_agent/: __init__.py  config.py  kb_snapshot.py  language.py  models.py  path_safety.py
src/thesis_agent/agent/: __init__.py  orchestrator.py  router.py  schemas.py  tool_runner.py  tools.py
src/thesis_agent/cli/: __init__.py  agent_run.py  build_index.py  build_vector_index.py  check_embedding_provider.py  check_ollama.py  compare_agent_rag_answer_runs.py  compare_eval_reports.py  compare_rag_answer_runs.py  evaluate_agent.py  evaluate_agent_rag_answer_quality_gates.py  evaluate_agent_rag_answers.py  evaluate_chunks.py  evaluate_multilingual_vector_smoke.py  evaluate_ollama_rag_answers.py  evaluate_quality_gates.py  evaluate_rag_answer_quality_gates.py  evaluate_rag_answers.py  evaluate_retrieval_modes.py  evaluate_retrieval_quality_gates.py  evaluate_retrieval_relevance.py  hybrid_search.py  ingest.py  search.py  (+10 more)
(+76 files in other folders)
