[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "thesis-rag-assistant"
version = "0.1.0"
description = "Thesis paper search and RAG assistant."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb",
    "pymupdf==1.27.2.2",
    "python-dotenv",
    "scikit-learn",
    "sentence-transformers",
    "streamlit[pdf]",
    "streamlit-pdf",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
cache_dir = ".tmp/pytest-cache"
